--- a/style.css
+++ b/style.css
@@ -45,10 +45,11 @@ section {
   max-width: 900px;
   margin: 30px auto;
   padding: 20px;
-  border-bottom: 2px solid #444;
-  background-color: rgba(0, 0, 0, 0.15); /* très transparent = 85% de transparence */
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+  background-color: transparent;
   border-radius: 10px;
 }
+
 
 section:last-of-type {
   border-bottom: none;
