--- a/style.css
+++ b/style.css
@@ -46,10 +46,9 @@ section {
   margin: 30px auto;
   padding: 20px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.05); /* très très transparent */
   border-radius: 10px;
 }
-
 
 section:last-of-type {
   border-bottom: none;
