--- a/style.css
+++ b/style.css
@@ -8,8 +8,14 @@ body {
 }
 
 body::before {
-  display: none !important;
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(47, 47, 47, 0.85); /* voile foncé semi-transparent */
+  z-index: -1;
 }
+
 
 header {
   color: white;
